// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register should render correctly 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Register
      isLoading={false}
      register={[MockFunction]}
    >
      <div>
        <p
          className="f-50 text-center font-title"
          style={
            Object {
              "marginBottom": "0.625rem",
            }
          }
        >
          Register
        </p>
        <div
          className="auth-card"
        >
          <form
            autoComplete="on"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="firstname"
                  onChange={[Function]}
                  placeholder="First Name"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="firstname"
                    onChange={[Function]}
                    placeholder="First Name"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="lastname"
                  onChange={[Function]}
                  placeholder="Last Name"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="lastname"
                    onChange={[Function]}
                    placeholder="Last Name"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="othername"
                  onChange={[Function]}
                  placeholder="Other Name"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="othername"
                    onChange={[Function]}
                    placeholder="Other Name"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="username"
                  onChange={[Function]}
                  placeholder="Username"
                  required="required"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="username"
                    onChange={[Function]}
                    placeholder="Username"
                    required="required"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="email"
                  onChange={[Function]}
                  placeholder="Email"
                  required="required"
                  type="email"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="email"
                    onChange={[Function]}
                    placeholder="Email"
                    required="required"
                    type="email"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="phonenumber"
                  onChange={[Function]}
                  pattern="{+0-9}[13]"
                  placeholder="Phone Number"
                  type="tel"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="phonenumber"
                    onChange={[Function]}
                    pattern="{+0-9}[13]"
                    placeholder="Phone Number"
                    type="tel"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="password"
                  onChange={[Function]}
                  pattern="(?=.*[a-z]).{6,}"
                  placeholder="Password"
                  required="required"
                  title="Must be 6 characters or more and contain at least lowercase letter"
                  type="password"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="password"
                    onChange={[Function]}
                    pattern="(?=.*[a-z]).{6,}"
                    placeholder="Password"
                    required="required"
                    title="Must be 6 characters or more and contain at least lowercase letter"
                    type="password"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="confirmpassword"
                  onChange={[Function]}
                  placeholder="Confirm Password"
                  required="required"
                  type="password"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="confirmpassword"
                    onChange={[Function]}
                    placeholder="Confirm Password"
                    required="required"
                    type="password"
                    value=""
                  />
                </Input>
              </div>
            </div>
            <div
              style={
                Object {
                  "marginTop": ".9235rem",
                }
              }
            >
              <Button
                className="btn-dark"
                type="submit"
                value="GET STARTED"
              >
                <button
                  className="btn btn-dark"
                  type="submit"
                >
                  GET STARTED
                </button>
              </Button>
            </div>
            <p
              className="f-20 text-grey text-center"
              style={
                Object {
                  "marginTop": ".9235rem",
                }
              }
            >
              Already have an account? Log in
               
              <Link
                className="text-blue"
                to="/login"
              >
                <a
                  className="text-blue"
                  href="/login"
                  onClick={[Function]}
                >
                  here
                </a>
              </Link>
            </p>
          </form>
        </div>
      </div>
    </Register>
  </Router>
</BrowserRouter>
`;

exports[`Register should render correctly with loader 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Register
      isLoading={true}
      register={[MockFunction]}
    >
      <div>
        <p
          className="f-50 text-center font-title"
          style={
            Object {
              "marginBottom": "0.625rem",
            }
          }
        >
          Register
        </p>
        <div
          className="auth-card"
        >
          <form
            autoComplete="on"
            onSubmit={[Function]}
          >
            <Dimmer
              active={true}
            >
              <DimmerInner
                active={true}
              >
                <Ref
                  innerRef={
                    Object {
                      "current": <div
                        class="ui active transition visible dimmer"
                        style="display: flex;"
                      >
                        <div
                          class="content"
                        >
                          <div
                            class="ui large text loader"
                          >
                            Loading
                          </div>
                        </div>
                      </div>,
                    }
                  }
                >
                  <RefFindNode
                    innerRef={
                      Object {
                        "current": <div
                          class="ui active transition visible dimmer"
                          style="display: flex;"
                        >
                          <div
                            class="content"
                          >
                            <div
                              class="ui large text loader"
                            >
                              Loading
                            </div>
                          </div>
                        </div>,
                      }
                    }
                  >
                    <div
                      className="ui active transition visible dimmer"
                      onClick={[Function]}
                    >
                      <div
                        className="content"
                      >
                        <Loader
                          size="large"
                        >
                          <div
                            className="ui large text loader"
                          >
                            Loading
                          </div>
                        </Loader>
                      </div>
                    </div>
                  </RefFindNode>
                </Ref>
              </DimmerInner>
            </Dimmer>
            <div
              className="form-group"
            >
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="firstname"
                  onChange={[Function]}
                  placeholder="First Name"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="firstname"
                    onChange={[Function]}
                    placeholder="First Name"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="lastname"
                  onChange={[Function]}
                  placeholder="Last Name"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="lastname"
                    onChange={[Function]}
                    placeholder="Last Name"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="othername"
                  onChange={[Function]}
                  placeholder="Other Name"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="othername"
                    onChange={[Function]}
                    placeholder="Other Name"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="username"
                  onChange={[Function]}
                  placeholder="Username"
                  required="required"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="username"
                    onChange={[Function]}
                    placeholder="Username"
                    required="required"
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="email"
                  onChange={[Function]}
                  placeholder="Email"
                  required="required"
                  type="email"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="email"
                    onChange={[Function]}
                    placeholder="Email"
                    required="required"
                    type="email"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="phonenumber"
                  onChange={[Function]}
                  pattern="{+0-9}[13]"
                  placeholder="Phone Number"
                  type="tel"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="phonenumber"
                    onChange={[Function]}
                    pattern="{+0-9}[13]"
                    placeholder="Phone Number"
                    type="tel"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="password"
                  onChange={[Function]}
                  pattern="(?=.*[a-z]).{6,}"
                  placeholder="Password"
                  required="required"
                  title="Must be 6 characters or more and contain at least lowercase letter"
                  type="password"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="password"
                    onChange={[Function]}
                    pattern="(?=.*[a-z]).{6,}"
                    placeholder="Password"
                    required="required"
                    title="Must be 6 characters or more and contain at least lowercase letter"
                    type="password"
                    value=""
                  />
                </Input>
              </div>
              <div
                className="input-div d-flex justify-content-center"
              >
                <Input
                  className="form-control-input"
                  name="confirmpassword"
                  onChange={[Function]}
                  placeholder="Confirm Password"
                  required="required"
                  type="password"
                  value=""
                >
                  <input
                    className="form-control-input"
                    name="confirmpassword"
                    onChange={[Function]}
                    placeholder="Confirm Password"
                    required="required"
                    type="password"
                    value=""
                  />
                </Input>
              </div>
            </div>
            <div
              style={
                Object {
                  "marginTop": ".9235rem",
                }
              }
            >
              <Button
                className="btn-dark"
                type="submit"
                value="GET STARTED"
              >
                <button
                  className="btn btn-dark"
                  type="submit"
                >
                  GET STARTED
                </button>
              </Button>
            </div>
            <p
              className="f-20 text-grey text-center"
              style={
                Object {
                  "marginTop": ".9235rem",
                }
              }
            >
              Already have an account? Log in
               
              <Link
                className="text-blue"
                to="/login"
              >
                <a
                  className="text-blue"
                  href="/login"
                  onClick={[Function]}
                >
                  here
                </a>
              </Link>
            </p>
          </form>
        </div>
      </div>
    </Register>
  </Router>
</BrowserRouter>
`;
